# demo-service-bambinotes

./: .gitignore  LICENSE  README.md  build.sh
.github/workflows/: enochecker_test.yml
checker/: .env  Dockerfile  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
checker/src/: checker.py  session.py
meta/: Dockerfile  bambi-notes.c  docker-compose.override.yml
service/: .dockerignore  .env  Dockerfile  bambi-notes  docker-compose.yaml  docker-compose.yml  entrypoint.sh  xinetd.conf
service_hidden/: bambi-notes.c
